# scenefun3d

./: .gitignore  README_cn.md  data  find_task_aff_masks.sh  pyproject.toml  requirements.txt
benchmark_file_lists/: val_scenes.txt  val_set.csv
concept_nodes/: find_aff_masks.py  find_functional_masks.py  find_laser_masks.py  find_obj_masks.py  find_pseudo_aff_masks.py  find_task_aff_masks.py  metric_instance_recall.py  metric_semantic_seg.py  plot_recall_cf.py  plot_scene_stats.py  utils.py  utils_save_queries.py  viz_all_masks.py  viz_camera_poses.py  viz_masks.py  viz_pcd.py  viz_pred_gt_aff_masks.py
concept_nodes/configs/: masks.yaml  metrics.yaml  plots.yaml  task_masks.yaml  viz.yaml
concept_nodes/configs/paths/: paths.yaml
data_downloader/: create_val_split.py
examples/: project_rgb_on_laser_scan.py
utils/: viz.py
