[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenefun3d"
version = "0.1.0"
description = "A minimal description for scenefun3d"
authors = [{ name = "SceneFun3D peeps", email = "your.email@example.com" }]
dependencies = []

[tool.setuptools.packages]
find = { include = ["eval", "concept_nodes", "data_downloader", "benchmark_file_lists"] }
